# vroom-engine

./: .gitignore  LICENSE  README.md
helloworld/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
helloworld/Assets/Models/BakerHouse/: BakerHouse.fbx
helloworld/Assets/Models/BakerHouse/.mayaSwatches/: diffuse.jpg_hcm.swatch
helloworld/Assets/Models/Warrior/: warrior maya project.mb
helloworld/Assets/Shaders/: TexCoordsShader.frag  TexCoordsShader.vert
helloworld/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Component.cpp  Component.h  FileSystem.cpp  FileSystem.h  GUIElement.cpp  GUIElement.h  GUIManager.cpp  GUIManager.h  GameObject.h  Gameobject.cpp  Globals.h  Input.cpp  Input.h  Log.cpp  Log.h  MaterialComponent.cpp  MaterialComponent.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Module.h  OpenGL.cpp  OpenGL.h  Render.cpp  Render.h  RenderMeshComponent.cpp  RenderMeshComponent.h  Shader.cpp  Shader.h  SystemInfo.h  Textures.cpp  Textures.h  TransformComponent.cpp  TransformComponent.h  VroomEngine.cpp  (+2 more)
